# ds-battery

./: Cargo.toml  package.json
.github/workflows/: release.yml
src/: dualsense.rs  graphics.rs  lib.rs  main.rs  polling.rs  renderer.rs  tray.rs  window.rs  window_creator.rs  window_message_handler.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
